# ReactionSystems

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  clippy.toml
analysis/: Cargo.toml
analysis/src/: helper.rs  main.rs
assert/: Cargo.toml
assert/src/: dsl.rs  fmt.rs  lib.rs  positivedsl.rs  positivefmt.rs  rsassert.rs  tests.rs
bisimilarity/: Cargo.toml
bisimilarity/src/: kenallakis_smolka_test.rs  lib.rs  paige_tarjan.rs  paige_tarjan_test.rs  test_kenallakis_smolka.rs  test_paige_tarjan.rs
execution/: Cargo.toml
execution/src/: data.rs  lib.rs  presets.rs
grammar/: Cargo.toml
grammar/src/: custom_error.rs  grammar.lalrpop  lib.rs
grammar_separated/: Cargo.toml  build.rs
grammar_separated/src/: assert.lalrpop  boolean.lalrpop  custom_error.rs  grammar.lalrpop  grouping.lalrpop  instructions.lalrpop  lib.rs  positive_assert.lalrpop  positive_grouping.lalrpop
rsprocess/: Cargo.toml
rsprocess/src/: boolean.rs  boolean_test.rs  choices.rs  element.rs  environment.rs  format_helpers.rs  graph.rs  graph_fmt.rs  label.rs  lib.rs  process.rs  reaction.rs  serialize.rs  set.rs  system.rs  system_test.rs  trace.rs  trace_test.rs  transitions.rs  translator.rs
src/: examples.rs  lib.rs  main.rs
src/rsprocess/: assert.rs  assert_fmt.rs  assert_tests.rs  bisimilarity.rs  choices.rs  classical.rs  confluence.rs  dot.rs  element.rs  environment.rs  format_helpers.rs  frequency.rs  grammar.lalrpop  graph.rs  label.rs  mod.rs  perpetual.rs  presets.rs  process.rs  reaction.rs  rsdot.rs  serialize.rs  set.rs  set_test.rs  statistics.rs  structure.rs  support_structures.rs  system.rs  system_test.rs  transitions.rs  translator.rs
src/rsprocess/assert/: dsl.rs  fmt.rs  mod.rs  rsassert.rs  tests.rs
src/rsprocess/bisimilarity/: bisimilarity_kanellakis_smolka.rs  bisimilarity_paige_tarkan.rs  mod.rs  test_paige_tarjan.rs
testing/: adversarial.system  counting.system  erbb.system  erbb_2.system  first.experiment  first.stats  first.system  medical.system  medical_no_instructions.system  test.system
testing/examples/: bisimilarity.system  bisimilarity2.system  deserialize.system  digraph.system  fastfrequency.experiment  fastfrequency.system  frequency.system  limitfrequency.system  loop.system  run.system  serialize.system  stats.system  target.system
testing/mex/: convert.plx  mex10.system  mex15.system  mex2.experiment  mex2.system  mex20.system  mex3.system  mex30.system  mex40.system  mex5.system  mex50.system
