[package]
name = "reactionsystems"
version = "0.1.0"
edition = "2024"
exclude = ["*.system", "*.experiment", "/testing/", "*.serial"]

[build-dependencies]
lalrpop = "0.22"

[dependencies]
rand = { version = "*" }
colored = { version = "*" }
regex = { version = "1", features = ["unicode-bool"] }
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
petgraph = { version = "*", features = ["serde-1"] }
petgraph-graphml = { version = "5" }
serde = { version = "1", features = ["derive", "rc"] }
serde_cbor_2 = { version = "*" }
