[package]
name = "execution"
version = "0.1.0"
edition = "2024"

[dependencies]
rsprocess = { path = "../rsprocess/" }
assert = { path = "../assert/" }
bisimilarity = { path = "../bisimilarity/" }
colored = { version = "*" }
petgraph = { version = ">=0.8", features = ["serde-1"] }
petgraph-graphml = { version = "*" }
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }
